# FileSet

./: .gitignore  NOTICE  README.md  fileset.bash-completion  pyproject.toml
docs/: fileset.md
docs/commands/: config.md  fs.md  get.md  index.md  ls.md  rm.md  run.md  stores.md
docs/sources/: csv.md
features/: conftest.py  run.py
features/implementation/: fileset.py  package.py  proc_check.py
features/scenarios/: config.feature  fileset.feature  help.feature  package.feature  version.feature
features/test_data/: .fileset.yml  FileSet.yml  expected.fileset.yml
features/test_data/sources/csv/: index.csv
fileset/: __main__.py  cli.py  config.py  exceptions.py  parsecfg.py  sets.py
fileset/cli/: config.py  errorhandler.py  exitcodes.py  main.py  store.py
fileset/sources/: csv.py
fileset/storageengines/: csv.py
maketools/: help.txt  init.mk  package.mk  scan.mk  test.mk
tests/: configutils.py  test_configfactory.py  test_convertcfgpath.py  test_fileset.py  test_filesetfactories.py  test_foo.py  test_getconfigpath.py  test_rawfactory.py
tests/sources/: test_csv.py
